# pre-commit-hooks-safety

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  README.md  dev-requirements.txt  hooks.yaml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yml
pre_commit_hooks/: safety.py  safety_check.py
tests/: safety_test.py
