[tool.poetry]
name = "pre-commit-hooks-safety"
version = "1.3.1"
description = "A pre-commit hook to check your Python dependencies against safety-db"
authors = ["Lucas Cimon <lucas.cimon@gmail.com>"]
repository = "https://github.com/Lucas-C/pre-commit-hooks-safety"
classifiers = [
    'License :: OSI Approved :: MIT License',
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
safety =  "^2.1.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "2.6.0"
pytest-mock = "^3.6.1"
black = "^22.3.0"
mypy = "^0.961"
bandit = "^1.7.4"
flake8 = "^4.0.1"
pylint = "^2.14.2"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
safety_check = "safety_check = pre_commit_hooks.safety_check:main"

# pyproject.toml
[tool.pytest.ini_options]
addopts = "--verbose --junit-xml=report.xml --cov --cov-report=xml:coverage.xml"

[flake8]
max-line-length = 140